# ionbus_parquet_cache

./: .gitignore  ARCHITECTURE.md  Local_Subsetting_Spec.md  Parquet_Cache_Spec.md  README.md  README_AI.md  RELEASING.md  __init__.py  bucketing.py  builtin_sources.py  cache_registry.py  cleanup_cache.py  data_cleaner.py  data_source.py  dated_dataset.py  exceptions.py  filter_utils.py  filtering.md  gcs_utils.py  import_npd.py  integration_tests.md  local_subset.py  non_dated_dataset.py  parquet_dataset_base.py  partition.py  pyproject.toml  readme_pip.md  release.bat  release.sh  rename_cache.py  requirements.txt  setup.py  snapshot.py  snapshot_history.py  sync_cache.py  sync_function_runner.py  update_datasets.py  update_pipeline.py  yaml_config.py  yaml_create_datasets.py
conda-recipe/: meta.yaml
historic_mds/: excisepanda.md
integration_tests/: 01_setup_data.sh  02_initial_load.sh  03_incremental_update.sh  04_copy_rename.sh  05_restate.sh  06_preserve_config.sh  run_all.bat  run_all.sh  verify.py
tests/: __init__.py  test_builtin_sources.py  test_cache_registry.py  test_cli.py  test_data_cleaner.py  test_data_source.py  test_dated_dataset.py  test_dpd_config_contract.py  test_exceptions.py  test_filter_utils.py  test_filters.py  test_gcs_code_paths.py  test_instrument_bucketing.py  test_local_subset.py  test_non_dated_dataset.py  test_partition.py  test_rename_cache.py  test_snapshot.py  test_sync_cache.py  test_sync_function_runner.py  test_update_datasets.py  test_update_lock.py  test_update_pipeline.py  test_yaml_config.py  test_yaml_create_datasets.py
(+7 files in other folders)
