[build-system]
requires = ["setuptools==71.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ionbus-parquet-cache"
authors = [
  { name = "Charles Lewis", email = "dev@ionbus.info" },
]
description = "Versioned Parquet dataset management with snapshots and multi-cache support"
license = "MIT"
readme = "readme_pip.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/ionbus/ionbus_parquet_cache"
Repository = "https://github.com/ionbus/ionbus_parquet_cache"
PyPI = "https://pypi.org/project/ionbus-parquet-cache/"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
